--- a/src/common/MovieCard.css
+++ b/src/common/MovieCard.css
@@ -2,10 +2,17 @@
     height: 300px;
 }
 
-div .card  {
+.card  {
     width: 250px;
 }
 
-div .card-title {
+.card:hover {
+    border: 2px solid #000;
+}
+
+.card-title {
     height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
